# open-data-explorer

./: .gitignore  main.py  manual_update.py  package.json  pyproject.toml  server.py
ds/plugins/: requests_counter.py
extension/: bookmarklet_redir.js  manifest.json  script.js  style.css
meta/: __init__.py  bookmarklets.py  datagv.py  ds_metadata.py  fetcher.py  globals.py  hardcoded_fixes.py  meta_db.py  offenerhaushalt.py  parlament.py  processes.py  progress_logger.py  tasks.py  test_meta.py  utils.py
meta/site_specific/: nextcloud.py
metadata/: datasette.yaml  meta.yaml  meta_db.yaml  schema.json
templates/: base.html  confirm_fetch.html  detail.html  fetch.html  index.html
tweaks/: CFE2FF7E9AD53C1EE053C630070AB109.yaml  c6fc4688-1aca-4363-bd1a-8d14ea08d2f8.yaml  d49a127d-f60f-4d6f-bb1c-46d70ff14699.yaml  e49a1510-9d93-4277-8467-48a1efc9f046.yaml  schema.json
very_simple_task_queue/: __init__.py  queue.py
