[project]
name = "open-data-explorer"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Winkler",email = "git@lw1.at"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "datasette @ file:///home/lukas/PycharmProjects/open-data-explorer/datasette",
    "starlette (>=0.47.0,<0.48.0)",
    "sqlite-utils (>=3.38,<4.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "geojson-to-sqlite (>=1.1.1,<2.0.0)",
    "fiona (>=1.10.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "python-magic @ git+https://github.com/ahupp/python-magic.git",
    "rdflib (>=7.1.4,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pandas-stubs = "^2.3.0.250703"


[tool.poetry.dependencies]
datasette = {develop = true}
